back/deployment-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
spec:
  selector:
    matchLabels:
      app: spring
  replicas: 1
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring
          image: dan1991/spring:latest
          ports:
            - containerPort: 8080
              name: spring
          resources: {}
      restartPolicy: Always
status: {}
