back/service-angular.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular
  labels:
    io.kompose.service: angular
spec:
  selector:
    app: angular
  type: NodePort
  ports:
    - name: "80"
      port: 80
      targetPort: 80
      nodePort: 30080
status:
  loadBalancer: {}
